force-app/main/default/objects/Claim_Loss_Summary_GL__mdt/Claim_Loss_Summary_GL__mdt.object-meta.xml
<CustomObject>
    <label>Claim Policy Transaction Summary</label>
    <pluralLabel>Claim Policy Transaction Summary</pluralLabel>
</CustomObject>