force-app/main/default/objects/Claim_Loss_Summary_GL__mdt/fields/Claim_Field__c.field-meta.xml
<CustomField>
    <fullName>Claim_Field__c</fullName>
    <label>Claim Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>