force-app/main/default/objects/Claim_Loss_Summary_GL__mdt/fields/Claim_Last_Transaction_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Claim_Last_Transaction_Date_Field__c</fullName>
    <label>Claim Last Transaction Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>