force-app/main/default/objects/Claim_Loss_Summary_GL__mdt/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>