force-app/main/default/objects/Claim_Loss_Summary_GL__mdt/fields/Policy_Field__c.field-meta.xml
<CustomField>
    <fullName>Policy_Field__c</fullName>
    <label>Policy Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>