force-app/main/default/objects/Claim_Loss_Summary_GL__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>GL_Account__c</columns>
    <columns>Claim_Field__c</columns>
    <columns>Policy_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>